--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             </span> <br/>
         No. of Years <select id="years">
             <option value="1">1</option>
-            <!-- fill in the rest of the values-->
+            <option value="10">10</option>
         </select> <br/>
         Interest : <span id="result"></span><br>
         <button onclick="compute()">Compute Interest</button>
