--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <button onclick="compute()">Compute Interest</button>
         <span id="result">
         </span>
-        <footer> &#169; This Calculator belongs to Josue Rojas Jaume</footer>
+        <footer> &#169; This Calculator belongs to Josue Rojas</footer>
+         <footer> &#169;Ⓒ Everyone Can Get Rich</footer>
     </div>
 </html>
