--- a/index.html
+++ b/index.html
@@ -1,34 +1,61 @@
-<!DOCTYPE html>
 <html>
-    <head>
-        <title>Simple Interest Calculator</title>
-    <script src="script.js"></script>
-    <link rel="stylesheet" href="style.css">
-    </head>
-    <div class="maindiv">
-        <h1>Simple Interest Calculator</h1>
+  <head>
+    <link rel="stylesheet" href="style.css" />
+    <title>Web App – Simple Interest Calculator</title>
+  </head>
+  <body>
+    <div id="container">
+      <h1>Simple Interest Calculator</h1>
 
-        Amount <input type="number"  id="principal">  <br/>
-        Rate <input type="range" id="rate" min="1" max="20" value="10.25"> <span id="rate_val">
-            10.25%
-            </span> <br/>
-        No. of Years <select id="years">
-            <option value="1">1</option>
-            <option value="2">2</option>
-            <option value="3">3</option>
-            <option value="4">4</option>
-            <option value="5">5</option>
-            <option value="6">6</option>
-            <option value="7">7</option>
-            <option value="8">8</option>
-            <option value="9">9</option>
-            <option value="10">10</option>
-        </select> <br/>
-        Interest : <span id="result"></span><br>
-        <button onclick="compute()">Compute Interest</button>
-        <span id="result">
-        </span>
-        <footer> &#169; This Calculator belongs to Josue Rojas</footer>
-         <footer> &#169;Ⓒ Everyone Can Get Rich</footer>
+      <div>
+        <p>Amount</p>
+        <input type="number" id="principal" value="0" />
+        <p>Interest Rate</p>
+        <span
+          ><input
+            type="range"
+            id="interestInput"
+            name="interestInput"
+            min="1"
+            max="20"
+            step="0.1"
+            value="0"
+            oninput="interest.value=interestInput.value"
+          />
+          <output id="interest" name="interest" for="interestInput">0</output
+          >%</span
+        >
+        <p>No. of Years</p>
+        <select name="years" id="years" value="0">
+          <option value="1">1</option>
+          <option value="2">2</option>
+          <option value="3">3</option>
+          <option value="4">4</option>
+          <option value="5">5</option>
+          <option value="6">6</option>
+          <option value="7">7</option>
+          <option value="8">8</option>
+          <option value="9">9</option>
+          <option value="10">10</option>
+        </select>
+      </div>
+      <button>Compute Interest</button>
+      <div id="container1" class="hidden">
+        <p>if you deposit <span id="principal_output">000000</span></p>
+        <br />
+        <p>at an interest rate of <span id="interest_output">000000</span>%</p>
+        <br />
+        <p>
+          you will receive an amount of <span id="amount_output">000000</span>
+        </p>
+        <br />
+        <p>in the year <span id="year_output">000000</span></p>
+        <br />
+        <p></p>
+      </div>
+
+      <span id="copyRight">&copy; Everyone Can Get Rich </span>
+      <script src="script.js"></script>
     </div>
+  </body>
 </html>
