--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         </span>
         <footer>
 
-            &#169; This Calculator belongs to Komal Reddy
+            &#169; This Calculator belongs to Josue Rojas
             <br>
             &#169; Everyone can get Rich
     
